creusot/tests/should_fail/prusti/logic/lifetime_mismatch2.stderr
error[creusot]: function was supposed to return data with type `&'c mut &'b mut X` but it is returning data with type `&'c mut &'a mut X`
                expected `'b` found `'a`
 --> lifetime_mismatch2.rs:4:1
  |
4 | #[logic]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `::creusot_contracts::logic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

